--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "jest": "20.0.4",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "mobx": "^3.3.2",
+    "mobx-react": "^4.3.5",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
